WinNT MPM: Fix thread-safety issue in worker_main().  All workers were allocating from pchild without holding ' child_lock.  Allocate from ptrans instead.

Related to: PR 52196

The reporter suggests that the apr_thread_t for r->connection->current_thread
should have a unique pool.  This revision handles that for WinNT MPM,
but not for other MPMs.


git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1374874 13f79535-47bb-0310-9956-ffa450edef68